test/malloc1.l1.out
0
1
2
3
4
5
6
7
8
9
error: address space access out of bounds
	#0                  masput	(builtin function)
	#1                   entry	(malloc1.l1:6)
